--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.454.0",
-    "next": "16.1.0",
-    "react": "^19",
-    "react-dom": "^19",
+    "next": "^16.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "sonner": "^1.7.4",
@@ -59,5 +59,9 @@
   "engines": {
     "node": ">=18.17.0"
   },
-  "packageManager": "pnpm@9.15.0"
+  "packageManager": "pnpm@9.15.0",
+  "optionalDependencies": {
+    "@next/swc-linux-x64-gnu": "^16.1.0",
+    "@next/swc-linux-x64-musl": "^16.1.0"
+  }
 }
